whoami/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
  # These are not needed by considered a good practice
  labels:
    app.kubernetes.io/name: whoami
    app.kubernetes.io/instance: whoami-example
  annotations:
    # Use only 80 and 443 entrypoint
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
spec:
  rules:
    - host: "whoami.internal"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: whoami
                port:
                  number: 80
